- bumped version - included fix for custom pages, so images don’t stretch past width of mobile devices

--- a/source/stylesheets/layout.css.scss
+++ b/source/stylesheets/layout.css.scss
@@ -102,6 +102,10 @@ ul {
 		color: $dark-green-color;
 	}
 	
+	img { 
+		max-width:100%;
+	}
+	
 	ol, ul {
 		font: .875em $serif-font; letter-spacing: 1px;
 	}
